k8s_file/test_k8s/security/pod-drop-chown-capability.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-drop-chown-capability
spec:
  containers:
    - name: main
      image: alpine
      command:
        - /bin/sleep
        - '999999'
      securityContext:
        capabilities: # 添加禁用内核功能，查阅Linux的内核功能
          drop:
            - CHOWN # 禁用容器修改文件的所有者，
