k8s_file/test_k8s/security/pod-with-host-pid-and-ipc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-host-pid-and-ipc
spec:
  hostPID: true
  hostIPC: true # hostIPC设置为true，pod的进程可以通过进程间通信与宿主机的其他进程进行通信；
  containers:
    - name: main
      image: alpine
      command:
        - /bin/sleep
        - '999999'
