k8s_file/test_k8s/security/pod-with-readonly-filesystem.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-readonly-filesystem
spec:
  containers:
    - name: main
      image: alpine
      command:
        - /bin/sleep
        - '999999'
      securityContext:
        readOnlyRootFilesystem: true # 这个容器的跟文件系统不允许写入
      volumeMounts: # 向/volume写入是允许的
        - mountPath: /volume
          name: my-volume
          readOnly: false
  volumes:
    - name: my-volume
      emptyDir: {}
